--- a/src/ui/components/Nav.css
+++ b/src/ui/components/Nav.css
@@ -11,6 +11,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: var(--body-color);
 }
 .nav__logo,
 .nav__user,
